--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.3",
     "rollup": "0.43.0",
+    "rollup-plugin-node-resolve": "3.0.0",
     "rollup-plugin-sourcemaps": "0.4.2",
     "rollup-plugin-uglify": "2.0.1",
     "sass-loader": "^4.0.1",
@@ -74,8 +75,7 @@
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-merge": "^0.14.0",
-    "webpack-node-externals": "^1.5.4",
-    "rollup-plugin-node-resolve": "3.0.0"
+    "webpack-node-externals": "^1.5.4"
   },
   "module": "./ngx-wizard.es5.js",
   "es2015": "./ngx-wizard.js",
