Display strings can also be Observables of strings

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "posttagVersion": "npm run build && npm publish dist",
     "prebuild": "rimraf dist out-tsc",
     "start": "webpack-dev-server --open --config ./webpack/webpack.dev.js",
-    "tagVersion": "np --no-publish",
-    "publish": "np"
+    "tagVersion": "np --no-publish"
   },
   "repository": {
     "type": "git",
